# India-Economic-Comparison

./: .gitignore  LICENSE  README.md  demo.py  generate_advanced_charts.py  generate_charts.py  generate_story_charts.py  index.html  pyproject.toml  requirements.txt
charts/: index.html
config/: settings.yaml
data/: sample_indicators.json
src/: __init__.py  cli.py  comparison_engine.py
src/api/: __init__.py  rest_api.py  routes.py
src/causal_inference/: __init__.py  engine.py
src/counterfactual/: __init__.py  simulator.py
src/data_pipeline/: __init__.py  pipeline.py  sources.py  transformers.py  validators.py
src/data_skepticism/: __init__.py  engine.py  quality_scores.py
src/debate_assistant/: __init__.py  assistant.py
src/ethical_framework/: __init__.py  framework.py
src/predictive_forensics/: __init__.py  forensics.py
src/uncertainty/: __init__.py  quantifier.py
src/visualization/: __init__.py  charts.py  dashboard.py
tests/: __init__.py  test_comparison_engine.py
